--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+  <title>CREVEA INC Min</title>
+  <meta name="description" content="CREVEA will support and connect educational institutions, conpanies across the world">
+  <meta name="keywords" content="educational,human resources,consulting business,consulting service">
+  
 
 
   <style>
